--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- NAVBAR -->
     <nav class="navbar">
       <div class="navbar-logo">
-        <img src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e597aef7560e23df783f86f_Flashfood%20Logo.svg" alt="Logo" />
+        <img src="logo.svg" alt="Logo" />
       </div>
       <ul class="navbar-items">
         <li><a href="#">How it works</a></li>
