--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 
     <!-- Links -->
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,26 +27,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="google_translate_element" style="display: none"></div>
+
     <!-- 
-            <img src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e597aef7560e23df783f86f_Flashfood%20Logo.svg" alt=""  class="d-inline-block align-text-top">
+            "https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e597aef7560e23df783f86f_Flashfood%20Logo.svg" 
     -->
 
     <!-- NAVBAR -->
     <nav class="navbar">
       <div class="navbar-logo">
-        <img src="logo.svg" alt="Logo" />
+        <img
+          src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/5e597aef7560e23df783f86f_Flashfood%20Logo.svg"
+          alt="Logo" 
+        />
       </div>
       <ul class="navbar-items">
         <li><a href="#">How it works</a></li>
         <li><a href="#">Locations</a></li>
         <li class="dropdown">
-            <a href="#" class="dropdown-btn">About &#9660;</a>
-            <div class="dropdown-content">
-              <a href="#">Mission</a>
-              <a href="#">Vision</a>
-              <a href="#">Values</a>
-            </div>
-          </li>
+          <a href="#" class="dropdown-btn">About &#9660;</a>
+          <div class="dropdown-content">
+            <a href="#">Mission</a>
+            <a href="#">Vision</a>
+            <a href="#">Values</a>
+          </div>
+        </li>
         <li><a href="#">Support</a></li>
         <li><a href="#">Partner</a></li>
         <li>
@@ -461,7 +468,7 @@
             alt=""
           />
         </div>
-        <div class="followImg ">
+        <div class="followImg">
           <img
             src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/6079b4cc2af973049f73bfe1_%40detroitfather.jpg"
             alt=""
@@ -488,54 +495,54 @@
       </div>
 
       <div class="row socialDiv">
-        <div class=" followbgImg">
+        <div class="followbgImg">
           <img
             src="https://assets-global.website-files.com/5e4482baa13a1926b23e2187/6079a3e353127e9a9a60b0e2_flashfood-app-icon.svg"
             alt=""
           />
           <a href="#">Find flashfood near you →</a>
           <div class="social-icons">
-            <a href="#" class="icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="icon"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="icon"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/flashfood/?hl=en" class="icon"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Flashfood/" class="icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/flashfoodinc" class="icon"><i class="fab fa-twitter"></i></a>
           </div>
         </div>
         <div class="socialImg mob4row">
-            <ul class="listImg">
-                <li><a href="">the team</a></li>
-                <li><a href="">locations</a></li>
-                <li><a href="">locations</a></li>
-                <li><a href="">locations</a></li>
-            </ul>
+          <ul class="listImg">
+            <li><a href="">the team</a></li>
+            <li><a href="">locations</a></li>
+            <li><a href="">locations</a></li>
+            <li><a href="">locations</a></li>
+          </ul>
         </div>
         <div class="socialImg mob4row">
-            <ul class="listImg">
-                <li><a href="">news</a></li>
-                <li><a href="">blog</a></li>
-                <li><a href="">refer a friend</a></li>
-                
-            </ul>
+          <ul class="listImg">
+            <li><a href="">news</a></li>
+            <li><a href="">blog</a></li>
+            <li><a href="">refer a friend</a></li>
+          </ul>
         </div>
         <div class="socialImg mob4row">
-            <ul class="listImg">
-                <li><a href="">partner</a></li>
-                <li><a href="">careers</a></li>
-                <li><a href="">support</a></li>
-                <li><a href="">contact us</a></li>
-            </ul>
+          <ul class="listImg">
+            <li><a href="">partner</a></li>
+            <li><a href="">careers</a></li>
+            <li><a href="">support</a></li>
+            <li><a href="">contact us</a></li>
+          </ul>
         </div>
         <div class="socialImg mob4row">
-            <ul class="listImg">
-                <li><a href="">terms of use</a></li>
-                <li><a href="">privacy policy</a></li>
-                <li><a href="">supplier diversity policy</a></li>
-                <li><a href="">responsible disclosure</a></li>
-            </ul>
+          <ul class="listImg">
+            <li><a href="">terms of use</a></li>
+            <li><a href="">privacy policy</a></li>
+            <li><a href="">supplier diversity policy</a></li>
+            <li><a href="">responsible disclosure</a></li>
+          </ul>
         </div>
       </div>
-
-      <div class="row socialDiv crTxt">© Flashfood Inc. 2023. All rights reserved.</div>
-      
+      <!-- Button for language conversion -->
+      <div class="row socialDiv crTxt">
+        © Flashfood Inc. 2023. All rights reserved.
+      </div>
     </div>
   </body>
   <script src="index.js"></script>
