--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flash Food</title>
 
     <!-- Links -->
     <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
