--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-btn">About &#9660;</a>
           <div class="dropdown-content">
-            <a href="#">Mission</a>
-            <a href="#">Vision</a>
-            <a href="#">Values</a>
+            <a href="#">Our Story</a>
+            <a href="#">Food Waste</a>
+            <a href="#">The Team</a>
+            <a href="#">Press Room</a>
+            <a href="#">Impact Report</a>
           </div>
         </li>
         <li><a href="#">Support</a></li>
